--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,7 +1,9 @@
 eclipse.preferences.version=1
+encoding//executor/executor.py=utf-8
+encoding//executor/test.py=utf-8
 encoding//parser/langLexer.py=utf-8
 encoding//parser/langParser.py=utf-8
-encoding//parser/parser.py=utf-8
+encoding//parser/rdhparser.py=utf-8
 encoding//parser/test.py=utf-8
 encoding//parser/visitor.py=utf-8
 encoding//type_system/core_types.py=utf-8
