Starting on a shell, but struggling to fit into infrastructure

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -6,6 +6,7 @@ encoding//parser/langParser.py=utf-8
 encoding//parser/rdhparser.py=utf-8
 encoding//parser/test.py=utf-8
 encoding//parser/visitor.py=utf-8
+encoding//shell/main.py=utf-8
 encoding//type_system/core_types.py=utf-8
 encoding//type_system/test.py=utf-8
 encoding/test.py=utf-8
