--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//cli/main.py=utf-8
 encoding//executor/executor.py=utf-8
 encoding//executor/test.py=utf-8
 encoding//parser/langLexer.py=utf-8
