--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -10,4 +10,5 @@ encoding//parser/visitor.py=utf-8
 encoding//shell/main.py=utf-8
 encoding//type_system/core_types.py=utf-8
 encoding//type_system/test.py=utf-8
+encoding//type_system/values.py=utf-8
 encoding/test.py=utf-8
